REFRACTOR : Added login and register page along with openAPI spec updation
